Unfreeze flatpickr and fix minor button alignment

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -185,7 +185,7 @@ input[type=text], input[type=email]{
 }
 
 .btn-primary{
-  margin-top:3vh;
+  //margin-top:3vh;
 }
 
 
